--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js",
+    "start": "watchify src/main.jsx -v -t [ babelify --presets [ react es2015 ] ] -o public/js/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/josipbrcina/react-skeleton#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
+    "material-ui": "^0.18.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.5",
+    "react-tap-event-plugin": "^2.0.1",
     "watchify": "^3.9.0"
   }
 }
